fix re rendering problems

--- a/README
+++ b/README
@@ -9,7 +9,7 @@ export PATH=$PATH:$ANDROID_HOME/platform-tools
 npx expo install @expo-google-fonts/roboto expo-av expo-camera expo-file-system expo-font expo-image-manipulator expo-image-picker expo-media-library expo-navigation-bar expo-screen-orientation expo-sensors
 npm install -D @babel/plugin-proposal-decorators babel-plugin-module-resolver @types/react @types/react-native-dotenv @types/sort-array @typescript-eslint/eslint-plugin @typescript-eslint/parser eslint eslint-config-prettier eslint-plugin-import-helpers eslint-plugin-prettier eslint-plugin-react eslint-plugin-react-hooks eslint-plugin-react-native eslint-plugin-simple-import-sort prettier react-native-dotenv react-native-svg-transformer react-native-web typescript
 npm install @baronha/react-native-photo-editor @brazilian-utils/brazilian-utils @expo-google-fonts/roboto @hookform/resolvers @nozbe/watermelondb @react-native-async-storage/async-storage @react-native-community/netinfo @react-navigation/bottom-tabs @react-navigation/native @react-navigation/native-stack @tanstack/react-query axios babel-plugin-inline-dotenv dayjs react-native-reanimated
-npm install fuse.js native-base query-string react-hook-form react-native-gesture-handler react-native-gradle-plugin react-native-image-crop-picker react-native-pager-view react-native-safe-area-context react-native-screens react-native-static-safe-area-insets react-native-svg react-native-tab-view react-native-uuid react-native-vision-camera react-native-web sort-array use-debounce yup
+npm install immer zustand fuse.js native-base query-string react-hook-form react-native-gesture-handler react-native-gradle-plugin react-native-image-crop-picker react-native-pager-view react-native-safe-area-context react-native-screens react-native-static-safe-area-insets react-native-svg react-native-tab-view react-native-uuid react-native-vision-camera react-native-web sort-array use-debounce yup
 
 AFTER ALL
 RCT_NEW_ARCH_ENABLED=1 pod install
